--- a/javascript/functions/function.html
+++ b/javascript/functions/function.html
@@ -16,7 +16,7 @@
 
 <button type="submit" onclick="addition()">ADD</button>
 </div> 
-
+<h1>  <span ig="result"></span></h1>
 
     <script src="function.js"></script>
 </body>
